# autodev

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LIVE_FEED_ANALYSIS.md  LIVE_FEED_FIX_SUMMARY.md  LIVE_FEED_IMPLEMENTATION_SUMMARY.md  Makefile  NAVIGATION_GUIDE.md  PLAN.md  README.md  SETTINGS_FIX.md  UI_fix.md  go.mod  go.sum  live_feed_prd.md  openapi.yaml  sample_api_prd.md  sample_authentication_prd.md  test_wrapindex.go  validation_script.py
.aprd/: TUI_ANALYSIS_PLAN.md
.codacy/: codacy.yaml
.github/: copilot-instructions.md
cmd/api/: main.go
cmd/aprd/: main.go
docs/: ARCHITECTURE.md  OPERATIONS.md  TRACKER_SCHEMA.md  live-feed.md  tracker-generation-robustness-plan.md  tui-to-config.md
internal/api/: auth.go  middleware.go  resources.go  router.go  router_test.go  security.go  server.go  users.go  users_test.go
internal/config/: config.go  config_test.go  validation_test.go
internal/runner/: build_args_test.go  proc_unix.go  proc_windows.go  runner.go  runner_test.go  temp_prd_test.go
internal/tui/: components.go  helpers.go  helpers_test.go  inputs.go  keymap_test.go  keys.go  keys_env.go  keys_logs.go  keys_prd.go  keys_progress.go  keys_prompt.go  keys_run.go  keys_settings.go  log_buffer_test.go  log_reader_test.go  logging.go  messages.go  model.go  model_test.go  navigation_test.go  path.go  prd.go  prd_test.go  run.go  run_feed.go  run_feed_batch.go  run_feed_batch_test.go  run_feed_stress_test.go  run_feed_test.go  run_integration_test.go  styles.go  tabs.go  typing_guard_test.go  update.go  update_keys.go  update_tabs.go  view.go  view_env.go  view_help.go  view_logs.go  (+6 more)
internal/utils/: utils.go
logs/: task_4_stall_reproduction_findings.md
tools/: auto_prd_to_pr_v3.py  generate_tracker.py
tools/auto_prd/: MANIFEST.in  __init__.py  agents.py  app.py  checkpoint.py  cli.py  command.py  command_checks.py  constants.py  context.py  errors.py  executor.py  gh_ops.py  git_ops.py  initializer.py  journal.py  local_loop.py  logging_utils.py  policy.py  pr_flow.py  progress.py  pyproject.toml  review_loop.py  rollback.py  startup.py  tracker_generator.py  tracker_schema.json  utils.py  verification.py  worker.py
tools/auto_prd/tests/: __init__.py  test_agents.py  test_checkpoint.py  test_cli_safety.py  test_constants.py  test_context.py  test_executor_resolution.py  test_feed_stress.py  test_generate_tracker_cli.py  test_gh_ops.py  test_helpers.py  test_incremental_flushing.py  test_initializer.py  test_integration_feed.py  test_prd_validation.py  test_reproduce_stall.py  test_review_loop.py  test_stdout_flushing.py  test_stdout_flushing_unittest.py  test_tracker_generator.py  test_utils.py  test_verification.py
tools/auto_prd/tests/fixtures/: flush_test_script.py
tools/tests/: __init__.py  test_initializer.py  test_tracker_generator.py  test_verification.py
