[project]
name = "auto-prd"
version = "0.1.0"
description = "Automated PRD-to-PR pipeline for AI-assisted development"
readme = "../../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Simo Kiihamaki"}
]
keywords = ["automation", "prd", "pull-request", "ai", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
auto-prd = "auto_prd.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["auto_prd*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "ARG", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
