[project]
name = "auto-prd"
version = "0.1.0"
description = "Automated PRD-to-PR pipeline for AI-assisted development"
readme = "../../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Simo Kiihamaki"}
]
keywords = ["automation", "prd", "pull-request", "ai", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
auto-prd = "auto_prd.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["auto_prd*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = [
    # E501: Line too long - ignored because many violations are in comments/regex
    "E501",
    # SIM105: contextlib.suppress - ignored because try/except/pass with comments
    # is clearer about intent than suppress()
    "SIM105",
    # SIM102: Nested if - ignored because nested ifs are often clearer for
    # complex conditional logic with different actions per branch
    "SIM102",
    # SIM117: Nested with - ignored because splitting contexts across lines
    # is often clearer, especially with assertRaises in tests
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
# Test files commonly have unused arguments in mock functions
"tests/*.py" = ["ARG001", "ARG002"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
# Ignore missing stubs for third-party libraries
ignore_missing_imports = true
# Exclude test files from strict checking (regex pattern)
exclude = "tests/"

[[tool.mypy.overrides]]
# Ignore errors in test files completely
module = ["auto_prd.tests.*", "tests.*"]
ignore_errors = true

